--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                             <div className="space-y-4">
                                 <div>
                                     <label className="block text-sm font-medium text-gray-700 mb-2">
-                                        Ihr Name (optional)
+                                        Ihr Name <span className="text-red-600">*</span>
                                     </label>
                                     <input
                                         type="text"
@@ -429,7 +429,7 @@
                                     </div>
                                     <div className="flex items-center gap-2">
                                         <ChevronDown size={16} className="text-gray-600" />
-                                        <span><strong>Nach unten:</strong> Egal</span>
+                                        <span><strong>Nach unten:</strong> Egal / Weiss nicht</span>
                                     </div>
                                 </div>
                                 <p className="text-xs text-gray-500 mt-3">
@@ -445,7 +445,8 @@
 
                             <button
                                 onClick={() => setCurrentStep('survey')}
-                                className="w-full mt-6 bg-green-600 text-white py-3 rounded-lg font-semibold hover:bg-green-700 transition"
+                                disabled={!userData.name.trim()}
+                                className="w-full mt-6 bg-green-600 text-white py-3 rounded-lg font-semibold hover:bg-green-700 transition disabled:bg-gray-300 disabled:cursor-not-allowed"
                             >
                                 Befragung starten ({questions.length} Fragen)
                             </button>
