--- a/index.html
+++ b/index.html
@@ -412,6 +412,12 @@
                                 </div>
                             </div>
 
+                            <div className="mt-4 p-4 bg-blue-50 rounded-lg">
+                                <p className="text-sm text-gray-700">
+                                    📧 Am Ende können Sie sich Ihre persönliche Auswahl per E-Mail zusenden lassen.
+                                </p>
+                            </div>
+
                             <div className="mt-6 p-4 bg-green-50 rounded-lg">
                                 <p className="text-sm text-gray-700 font-semibold mb-3">So funktioniert's:</p>
                                 <div className="space-y-2 text-sm text-gray-600">
@@ -437,9 +443,10 @@
                                 </p>
                             </div>
                             
-                            <div className="mt-4 p-3 bg-blue-50 rounded-lg">
-                                <p className="text-xs text-gray-600">
-                                    💾 Ihre Antworten werden automatisch alle 10 Fragen gespeichert.
+                            <div className="mt-4 p-3 bg-yellow-50 border border-yellow-200 rounded-lg">
+                                <p className="text-sm text-gray-700">
+                                    ⏱️ <strong>Nur 5 Minuten:</strong> Ich weiss, {questions.length} Fragen sind viel. 
+                                    Aber mit Klick, Wisch oder Pfeiltasten geht's richtig schnell – versprochen! 😊
                                 </p>
                             </div>
 
@@ -538,7 +545,7 @@
                                         >
                                             <ChevronDown size={28} className="text-gray-600" />
                                         </button>
-                                        <span className="text-xs font-semibold text-gray-600">Egal</span>
+                                        <span className="text-xs font-semibold text-gray-600">Egal / Weiss nicht</span>
                                     </div>
                                 </div>
                             </div>
