Kleine Text- und Emailanpassungen

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                                 </p>
                                 <p>
                                     Bald ist Weihnachten – die Zeit der Wünsche. Ich habe mir Gedanken gemacht: 
-                                    Was wünsche ich mir für unsere Gemeinde? Herausgekommen sind über 100 konkrete Ideen 
+                                    Was wünsche ich mir für unsere Gemeinde? Herausgekommen sind 100 konkrete Ideen 
                                     und Anliegen für Volketswil.
                                 </p>
                                 <p>
@@ -387,7 +387,7 @@
                                     Falls ich als Gemeinderat gewählt werde, weiss ich dann genau, wofür ich mich einsetzen soll.
                                 </p>
                                 <p className="text-sm text-gray-600 italic">
-                                    Die Befragung dauert ca. {TEST_MODE ? '1-2' : '7-10'} Minuten und Ihre Antworten werden 
+                                    Die Befragung dauert ca. 10 Minuten und Ihre Antworten werden 
                                     regelmässig automatisch gespeichert.
                                 </p>
                             </div>
@@ -438,7 +438,8 @@
 
                             <div className="mt-4 p-4 bg-blue-50 rounded-lg">
                                 <p className="text-sm text-gray-700">
-                                    📧 Am Ende können Sie sich Ihre persönliche Auswahl per E-Mail zusenden lassen.
+                                    📧 Am Ende können Sie sich Ihre persönliche Auswahl per E-Mail zusenden lassen 
+                                    (ich frage dann nach Ihrer E-Mail-Adresse, falls gewünscht).
                                 </p>
                             </div>
 
@@ -469,7 +470,7 @@
                             
                             <div className="mt-4 p-3 bg-yellow-50 border border-yellow-200 rounded-lg">
                                 <p className="text-sm text-gray-700">
-                                    ⏱️ <strong>Nur 5 Minuten:</strong> Ich weiss, {questions.length} Fragen sind viel. 
+                                    ⏱️ <strong>Nur 10 Minuten:</strong> Ich weiss, {questions.length} Fragen sind viel.
                                     Aber mit Klick, Wisch oder Pfeiltasten geht's richtig schnell – versprochen! 😊
                                 </p>
                             </div>
